--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
     
     <style>
+        body {
+          background-color: #F0FFF0; /* Set the background color */
+        }
+        
         #title {
             text-align: center;
             font-family: 'Josefin Sans', sans-serif;
@@ -24,6 +28,10 @@
             font-family: 'Josefin Sans', sans-serif;
             font-size: 24px;
         }
+
+        .pure-u-3-2 {
+            padding: 25px; /* Add space between charts horizontally */
+        }
     </style>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
@@ -33,18 +41,19 @@
 </head>
 
 <body>
-    <div class="pure-g">
-        <div class="pure-u-1">
+  <div class="pure-g">
+        <div class="pure-u-1" style="text-align: center;">
             <div id="title">
                 <h1>Global Statistics</h1>
             </div>
         </div>
 
-        <div class="pure-u-1-1">
-          <div id="title_description">
-            <h1>Introduction</h1>
-            <p>In this visualization, the aim is to create a compelling and informative representation of global statistics, covering a wide range of key indicators such as the Consumer Price Index (CPI), life expectancy, and more. Through vivid charts, graphs, and interactive elements, it intends to offer viewers a clear and engaging insight into the evolving trends and patterns that shape our world. By visually connecting data points and highlighting global disparities and progress, this visualization will empower individuals to better understand and appreciate the complex dynamics of our global society, fostering a deeper awareness of the challenges and opportunities that lie ahead.</p>
-          </div>
+        <div class="pure-u-3-2">
+          <div class = "pure-u-1">
+            <div id="title_description">
+              <h1>Introduction</h1>
+              <p>In this visualization, the aim is to create a compelling and informative representation of global statistics, covering a wide range of key indicators such as the Consumer Price Index (CPI), life expectancy, and more. Through vivid charts, graphs, and interactive elements, it intends to offer viewers a clear and engaging insight into the evolving trends and patterns that shape our world. By visually connecting data points and highlighting global disparities and progress, this visualization will empower individuals to better understand and appreciate the complex dynamics of our global society, fostering a deeper awareness of the challenges and opportunities that lie ahead.</p>
+            </div>
       </div>
 
       <h1 style="margin-top: 20px">______________________________________________________________________________________________________________________________________________________________________________________</h1>
