--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
         #title {
             text-align: center;
             font-family: 'Josefin Sans', sans-serif;
-            font-size: 36px;
+            font-size: 24px;
         }
+        
         #bibliography {
             text-align: center;
             font-family: 'Josefin Sans', sans-serif;
             font-size: 24px;
-        }
-
-        .pure-u-3-2 {
-            padding: 25px; /* Add space between charts horizontally */
         }
     </style>
 
@@ -41,17 +38,12 @@
 </head>
 
 <body>
-  <div class="pure-g">
-        <div class="pure-u-1" style="text-align: center;">
-            <div id="title">
-                <h1>Global Statistics</h1>
-            </div>
-        </div>
 
+  <div class="pure-g">
         <div class="pure-u-3-2">
           <div class = "pure-u-1">
-            <div id="title_description">
-              <h1>Introduction</h1>
+            <div id="title" style="text-align: center;">
+              <h1>Global Statistics</h1>
               <p>In this visualization, the aim is to create a compelling and informative representation of global statistics, covering a wide range of key indicators such as the Consumer Price Index (CPI), life expectancy, and more. Through vivid charts, graphs, and interactive elements, it intends to offer viewers a clear and engaging insight into the evolving trends and patterns that shape our world. By visually connecting data points and highlighting global disparities and progress, this visualization will empower individuals to better understand and appreciate the complex dynamics of our global society, fostering a deeper awareness of the challenges and opportunities that lie ahead.</p>
             </div>
       </div>
@@ -73,7 +65,7 @@
             <p>Infant Mortality Rate (IMR) and Life Expectancy are two crucial demographic indicators that provide valuable insights into a nation's overall health and well-being. IMR reflects the number of infant deaths per 1,000 live births, highlighting a country's healthcare infrastructure and maternal and child care programs. Conversely, Life Expectancy signifies the average number of years a person can expect to live, indicating the overall quality of life and healthcare access. There is a strong correlation between these two metrics – lower IMR typically corresponds to higher life expectancy, demonstrating the importance of effective healthcare systems and public health initiatives in extending and improving the lives of a nation's citizens. Understanding the relationship between IMR and Life Expectancy is pivotal for policymakers in their efforts to enhance the overall health and longevity of their populations.</p>
           </div>
 
-          <div id="SCATTER_PLOT"></div>
+        <div id="SCATTER_PLOT"></div>
       </div>
 
 
@@ -82,7 +74,7 @@
             <h2>Percentage Of Language Spoken as Official Language In The World</h2>
             <p>The "Percentage Of Languages Spoken as Official Language In The World" is a compelling visualization that offers valuable insights into the linguistic diversity of our global society. By aggregating data on official languages from various countries, it showcases the distribution and prevalence of different languages on a worldwide scale. Through a visually engaging pie chart, viewers can gain a deeper understanding of the significance of languages in shaping cultural identities and political landscapes. This visualization underscores the rich tapestry of languages spoken globally, highlighting the importance of multilingualism and cultural preservation. It serves as a reminder of the diversity that enriches our world and the role language plays in fostering cross-cultural communication and understanding.</p>
           </div>
-          <div id="PIE_CHART"></div>
+        <div id="PIE_CHART"></div>
       </div>
 
       <div class="pure-u-1-2"; style="margin-bottom: 15px">
@@ -91,7 +83,7 @@
             <p>Infant Mortality Rate (IMR) and Life Expectancy are two crucial demographic indicators that provide valuable insights into a nation's overall health and well-being. IMR reflects the number of infant deaths per 1,000 live births, highlighting a country's healthcare infrastructure and maternal and child care programs. Conversely, Life Expectancy signifies the average number of years a person can expect to live, indicating the overall quality of life and healthcare access. There is a strong correlation between these two metrics – lower IMR typically corresponds to higher life expectancy, demonstrating the importance of effective healthcare systems and public health initiatives in extending and improving the lives of a nation's citizens. Understanding the relationship between IMR and Life Expectancy is pivotal for policymakers in their efforts to enhance the overall health and longevity of their populations.</p>
           </div>
 
-          <div id="BUBBLE_CHART"></div>
+        <div id="BUBBLE_CHART"></div>
       </div>
 
 
@@ -101,7 +93,7 @@
             <p>Infant Mortality Rate (IMR) and Life Expectancy are two crucial demographic indicators that provide valuable insights into a nation's overall health and well-being. IMR reflects the number of infant deaths per 1,000 live births, highlighting a country's healthcare infrastructure and maternal and child care programs. Conversely, Life Expectancy signifies the average number of years a person can expect to live, indicating the overall quality of life and healthcare access. There is a strong correlation between these two metrics – lower IMR typically corresponds to higher life expectancy, demonstrating the importance of effective healthcare systems and public health initiatives in extending and improving the lives of a nation's citizens. Understanding the relationship between IMR and Life Expectancy is pivotal for policymakers in their efforts to enhance the overall health and longevity of their populations.</p>
           </div>
 
-          <div id="BAR_CHART"></div>
+        <div id="BAR_CHART"></div>
       </div>
       
       <div class="pure-u-1-2"; style="margin-bottom: 15px">
