--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             font-family: 'Josefin Sans', sans-serif;
             font-size: 24px;
         }
-        
-        #bibliography {
-            text-align: center;
-            font-family: 'Josefin Sans', sans-serif;
-            font-size: 24px;
+
+        .content-container {
+            max-width: 750px;
+            margin: 0 auto;
+            padding: 20px;
         }
     </style>
 
@@ -39,7 +39,7 @@
 
 <body>
 
-  <div class="pure-g">
+    <div class="pure-g">
         <div class="pure-u-3-2">
           <div class = "pure-u-1">
             <div id="title" style="text-align: center;">
@@ -107,19 +107,16 @@
 
       <h1 style="margin-top: 80px">______________________________________________________________________________________________________________________________________________________________________________________</h1>
 
-        <div class="pure-u-1">
+        <div class="pure-u-1" style="text-align: center;">
             <div id="bibliography">
                 <h1>BIBLIOGRAPHY</h1>
             </div>
-            <p style="font-size: 15px">
-              Kumarrajarshi. (2017). <em>Life expectancy (WHO)</em> [Data file]. Retrieved from https://www.kaggle.com/datasets/kumarajarshi/life-expectancy-who 
-              <br><br>
-          </p>
         </div>
 
         <div class="pure-u-1"; style="margin-bottom: 10px">
           <div id="authorship">
               <p>
+                Reference: Kaggle
                 Visualisation by Toh Thien Yew 
                 Student ID: 32889879
                 FIT3179 Data Visualization 2
